tests/NormalTests/paczka1/fuzzy1/24033476.err
Error in line 1: A823 A823 88,0
Error in line 10: kn2GLc28s6 A986 76,5
Error in line 2: rgNJPQE A823 47,8
Error in line 15: rgNJPQE A978 98,2
Error in line 20: rgNJPQE A823 4,1
Error in line 13: kn2GLc28s6 A828 51,4
